recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:20: error: reassignment to val
  if(height = 1){
            ^